--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "client",
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "scripts": {
+    "build": "ng build --prod",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.js",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "test-karma": "karma test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "webpack-dev": "cross-env NODE_ENV=development webpack --mode development",
-    "webpack-prod": "cross-env NODE_ENV=production webpack --mode production",
+    "start-build-homologation": "rimraf dist && webpack --config config/webpack.dev.js --profile --env --bail -p --preserve-symlinks",
+    "start-build-production": "rimraf dist && webpack --config config/webpack.prod.js --profile --env --bail -p --preserve-symlinks",
+    "start-build-webpack-prod": "webpack --config config/webpack.prod.js",
     "start-dev": "webpack --mode development",
     "start-webpack-dev": "webpack-dev-server --port 3001 --config config/webpack.dev.js --mode development --preserve-symlinks --watch-content-base --open --optimize-minimize",
-    "start-build-webpack-prod": "webpack --config config/webpack.prod.js",
-    "start-build-prod": "rimraf dist && webpack --config config/webpack.prod.js --profile --env --bail -p --preserve-symlinks",
-    "start-build-production": "rimraf dist && webpack --config config/webpack.prod.js --profile --env --bail -p --preserve-symlinks",
-    "start-build-homologation": "rimraf dist && webpack --config config/webpack.dev.js --profile --env --bail -p --preserve-symlinks"
+    "test": "ng test",
+    "test-karma": "karma test",
+    "webpack-dev": "cross-env NODE_ENV=development webpack --mode development",
+    "webpack-prod": "cross-env NODE_ENV=production webpack --mode production"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
@@ -37,9 +36,6 @@
     "@ngx-pwa/local-storage": "^5.3.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^3.0.1",
-    "@types/crossfilter": "0.0.31",
-    "@types/d3": "^5.0.0",
-    "@types/leaflet": "^1.4.3",
     "core-js": "^2.4.1",
     "crossfilter2": "1.4.6",
     "d3": "5.5.0",
@@ -65,49 +61,53 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.0",
-    "@babel/core": "^7.0.0-beta.53",
-    "@babel/preset-env": "^7.0.0-beta.53",
-    "@types/d3": "^5.0.0",
-    "@types/d3-queue": "^3.0.7",
+    "@angular/cli": "~8.2.1",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@types/crossfilter": "0.0.31",
+    "@types/d3": "^5.7.2",
+    "@types/d3-queue": "^3.0.8",
     "@types/dc": "0.0.28",
-    "@types/file-saver": "^2.0.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.4",
-    "@types/jqueryui": "^1.12.2",
-    "@types/node": "~6.0.60",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^5.0.0",
-    "codelyzer": "^4.0.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
+    "@types/file-saver": "^2.0.1",
+    "@types/jasmine": "~3.4.0",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/jquery": "^3.3.31",
+    "@types/jqueryui": "^1.12.7",
+    "@types/leaflet": "^1.4.3",
+    "@types/node": "~12.7.1",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "codelyzer": "^5.1.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.2.0",
     "css-to-string-loader": "^0.1.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^3.0.7",
-    "jasmine-core": "~2.8.0",
+    "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "protractor": "~5.1.2",
-    "serviceworker-webpack-plugin": "^1.0.0-alpha02",
-    "style-loader": "^0.21.0",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "2.8.4",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "4.18.0",
-    "file-loader": "^1.1.11",
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "~3.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "protractor": "~5.4.2",
+    "sass-loader": "^7.1.0",
+    "serviceworker-webpack-plugin": "^1.0.1",
+    "style-loader": "^1.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "3.5.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "4.39.1",
     "webpack-babel-installer": "^1.0.0",
-    "webpack-cli": "2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   }
 }
