--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^7.4.4",
     "@angular/cli": "~8.2.1",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
@@ -73,6 +74,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.6",
+    "@types/jest": "^24.0.17",
     "@types/jquery": "^3.3.31",
     "@types/jqueryui": "^1.12.7",
     "@types/leaflet": "^1.4.3",
@@ -90,11 +92,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.2.0",
-    "karma-chrome-launcher": "~3.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "jest": "^24.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "protractor": "~5.4.2",
     "sass-loader": "^7.1.0",
