--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-prod": "cross-env NODE_ENV=production webpack --mode production"
   },
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.802.1",
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
