--- a/angular.json
+++ b/angular.json
@@ -75,32 +75,7 @@
           }
         },
         "test": {
-          "builder": "@angular-builders/jest:run",
-          "options": {
-            "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "scripts": [
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css",
-              "src/theme.scss"
-            ],
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "src/assets/**/*",
-                "output": "/assets/**/*"
-              },
-              {
-                "glob": "favicon.ico",
-                "input": "src",
-                "output": "/"
-              }
-            ]
-          }
+          "builder": "@angular-builders/jest:run"
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
