--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
@@ -57,10 +56,12 @@
     "rxjs": "^5.5.6",
     "terrabrasilis-api": "latest",
     "terrabrasilis-jsonix": "^2.4.2",
+    "tslib": "^1.10.0",
     "w3c-schemas": "^1.4.0",
-    "zone.js": "^0.8.19"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.802.1",
     "@angular/cli": "~8.2.1",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
@@ -79,7 +80,7 @@
     "@types/node": "~12.7.1",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
-    "codelyzer": "^5.1.0",
+    "codelyzer": "^5.0.1",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
