added circular reference check step to webpack

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
@@ -80,6 +81,7 @@
     "@types/node": "~12.7.1",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
+    "circular-dependency-plugin": "^5.2.0",
     "codelyzer": "^5.0.1",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
